# blobfilters

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  DESIGN.md  Makefile  README.md  README_HISTOGRAMS.md  build_all.sh  extension_config.cmake  pyproject.toml  run_demo.sh
.forgejo/workflows/: build-and-publish.yml
data/: domains.duckdb
demo/: duckdb_demo.sql  fingerprint_demo.c  python_demo.py  sampling_demo.sql  sqlite_demo.c
docs/: Domain-Typed Morphisms — the D-to-C Arrow over Spreadsheets and Databases.md  One Fingerprint Two Halves.md  browser-domain-matching.md
duckdb_ext/src/: roaring_duckdb.c  roaring_extension.cpp
duckdb_ext/src/include/: roaring_extension.hpp
experiments/: build_normalized_filters.py  edgar_domains.py  edgar_domains.sql  energystar_domain_update.py  enriched_disasters.py  expand_codes.py  expand_domains.py  expand_domains.sql  expand_domains_2.py  expand_domains_3.py  expand_domains_materials.py  expand_domains_mep.py  formula_fingerprint.py  value_fingerprint.py
ext/duckdb/: CMakeLists.txt  pyproject.toml  test_extension.py
ext/duckdb/blobfilters_duckdb/: __init__.py  blobfilters.duckdb_extension
ext/sqlite/: CMakeLists.txt  pyproject.toml  test_extension.py
ext/sqlite/blobfilters_sqlite/: __init__.py
include/: roaring_fp.h
python/: bindings.cpp
python/blobfilters/: __init__.py
scripts/: append_duckdb_metadata.py
sql/aboutness/: .gitignore  README.md  argmax_match.sql  cluster_label.sql  fetch_socrata.sh
sql/charclass/: README.md  composite_registry.sql  envelope_junction.sql  feature_vector.sql  histogram_profile.sql  straggler_workflow.sql
sql/relvar_arrows/: .gitignore  README.md  chinook_arrows.sql  fetch_chinook.sh
sql/sampling/: workflow_duckdb.sql
sqlite_ext/src/: roaring_sqlite.cpp
src/: CMakeLists.txt  roaring_fp.cpp
test/: test_roaring.c
test/sql/: roaring_test.sql
tools/: build_normalized_filters.py
