[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blobfilters-duckdb"
version = "0.2.3"
description = "Roaring bitmap fingerprinting — DuckDB extension"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Paul Harrington"}]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["blobfilters_duckdb"]

[tool.setuptools.package-data]
blobfilters_duckdb = ["*.duckdb_extension"]
