[build-system]
requires = ["scikit-build-core>=0.5"]
build-backend = "scikit_build_core.build"

[project]
name = "blobfilters-sqlite"
version = "0.1.0"
description = "bitset fingerprinting with Roaring bitmaps — Sqlite extension"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Paul Harrington"}]
dependencies = []

[tool.scikit-build]
wheel.packages = ["blobfilters_sqlite"]
sdist.include = ["src/**", "include/**", "sqlite_ext/**", "third_party/**"]
