[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "blobfilters-sqlite"
version = "0.2.3"
description = "Roaring bitmap fingerprinting — SQLite extension"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Paul Harrington"}]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["blobfilters_sqlite"]

[tool.setuptools.package-data]
blobfilters_sqlite = ["*.so", "*.dylib", "*.dll"]
